RESOLVED FIXED280295
[Win] Fix problems of SystemInfo.cpp
https://bugs.webkit.org/show_bug.cgi?id=280295
Summary [Win] Fix problems of SystemInfo.cpp
Fujii Hironori
Reported 2024-09-24 14:44:05 PDT
* GetVersionEx constantly returns Windows 8 OS version due to no manifest <https://learn.microsoft.com/ja-jp/windows/win32/api/sysinfoapi/nf-sysinfoapi-getversionexa> * I think we have no needs to use GetProcAddress for IsWow64Process and GetNativeSystemInfo nowadays Or, use <wtf/SoftLinking.h> * WindowsVersion enum has to be updated
Attachments
Fujii Hironori
Comment 1 2024-10-09 23:31:10 PDT
EWS
Comment 2 2024-10-11 02:07:17 PDT
Committed 285009@main (d0795f0c2fa2): <https://commits.webkit.org/285009@main> Reviewed commits have been landed. Closing PR #34965 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.