[Win] Fix problems of SystemInfo.cpp https://bugs.webkit.org/show_bug.cgi?id=280295

Reviewed by Ross Kirsling.

GetVersionEx API always returned the Windows 8 version number.
<https://learn.microsoft.com/en-us/windows/win32/api/sysinfoapi/nf-sysinfoapi-getversionexa>
Added supportedOS to application manifests to make the API work as
expected on newer Windows.

GetNativeSystemInfo API is available after Windows XP and Windows
Server 2003.
<https://learn.microsoft.com/en-us/windows/win32/api/sysinfoapi/nf-sysinfoapi-getnativesysteminfo>
We no longer need to use GetProcAddress for it.

Removed the code for old Windows in WebCore::createSharedCursor.

* Source/WebCore/platform/win/CursorWin.cpp:
(WebCore::createSharedCursor):
* Source/WebCore/platform/win/SystemInfo.cpp:
(WebCore::windowsVersion):
(WebCore::processorArchitecture):
(WebCore::architectureTokenForUAString):
(WebCore::windowsVersionForUAString):
(WebCore::osVersionForUAString): Deleted.
* Source/WebCore/platform/win/SystemInfo.h:
* Source/WebKit/win/WebKit.manifest:
* Tools/MiniBrowser/win/MiniBrowser.exe.manifest:
* Tools/WebKitTestRunner/win/WebKitTestRunner.exe.manifest:

Canonical link: https://commits.webkit.org/285009@main